PM-1551 replaced isBlank() with trim().isEmpty()